--- a/assets/css/pages/offline.css
+++ b/assets/css/pages/offline.css
@@ -65,7 +65,7 @@
 }
 
 .left p {
-    font-size: 150%;
+    font-size: 34px;
     margin-right: -100px;
     text-align: left;
 }
@@ -209,9 +209,8 @@ h2 {
     }
     
     .left p {
-        font-size: 120%;
+        font-size: 140%;
         margin-right: 0;
-        text-align: center;
     }
     
     .avatar {
@@ -266,7 +265,7 @@ h2 {
     }
     
     .contact a {
-        font-size: 24px;
+        font-size: 30px;
         padding-top: 1rem;
     }
     
